--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vue-router": "^2.3.1"
     },
     "devDependencies": {
+        "@types/webpack-dev-server": "^2.4.0",
         "autoprefixer": "^6.7.2",
         "babel-core": "^6.22.1",
         "babel-eslint": "^7.1.1",
@@ -44,6 +45,8 @@
         "friendly-errors-webpack-plugin": "^1.1.3",
         "html-webpack-plugin": "^2.28.0",
         "http-proxy-middleware": "^0.17.3",
+        "less": "^2.7.2",
+        "less-loader": "^4.0.4",
         "opn": "^4.0.2",
         "optimize-css-assets-webpack-plugin": "^1.3.0",
         "ora": "^1.2.0",
