--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
         "lint": "eslint --ext .js,.vue src"
     },
     "dependencies": {
+        "@types/echarts": "0.0.6",
+        "echarts": "^3.6.1",
         "element-ui": "^1.3.5",
         "vue": "^2.3.3",
+        "vue-echarts-v3": "^1.0.4",
         "vue-router": "^2.3.1"
     },
     "devDependencies": {
