--- a/package.json
+++ b/package.json
@@ -59,6 +59,9 @@
         "style-loader": "^0.18.2",
         "url-loader": "^0.5.8",
         "vue-loader": "^12.1.0",
+        "vue-markdown": "^2.1.3",
+        "vue-quill-editor": "^2.2.2",
+        "vue-simplemde": "^0.3.8",
         "vue-style-loader": "^3.0.1",
         "vue-template-compiler": "^2.3.3",
         "webpack": "^2.6.1",
