--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     },
     "dependencies": {
         "@types/echarts": "0.0.6",
+        "@types/nprogress": "0.0.29",
         "echarts": "^3.6.1",
         "element-ui": "^1.3.5",
+        "nprogress": "^0.2.0",
         "vue": "^2.3.3",
         "vue-echarts-v3": "^1.0.4",
         "vue-router": "^2.3.1"
     },
     "devDependencies": {
+        "@types/axios": "^0.14.0",
         "@types/webpack-dev-server": "^2.4.0",
         "autoprefixer": "^6.7.2",
+        "axios": "^0.16.2",
         "babel-core": "^6.22.1",
         "babel-eslint": "^7.1.1",
         "babel-loader": "^6.2.10",
@@ -50,6 +54,7 @@
         "http-proxy-middleware": "^0.17.3",
         "less": "^2.7.2",
         "less-loader": "^4.0.4",
+        "mockjs": "^1.0.1-beta3",
         "opn": "^4.0.2",
         "optimize-css-assets-webpack-plugin": "^1.3.0",
         "ora": "^1.2.0",
