--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/webpack-dev-server": "^2.4.0",
         "autoprefixer": "^6.7.2",
         "axios": "^0.16.2",
+        "axios-mock-adapter": "^1.9.0",
         "babel-core": "^6.22.1",
         "babel-eslint": "^7.1.1",
         "babel-loader": "^6.2.10",
