--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     },
     "dependencies": {
         "@types/echarts": "0.0.6",
+        "@types/file-saver": "0.0.1",
         "@types/nprogress": "0.0.29",
+        "@types/xlsx": "0.0.34",
         "echarts": "^3.6.1",
         "element-ui": "^1.3.5",
+        "file-saver": "^1.3.3",
         "nprogress": "^0.2.0",
         "vue": "^2.3.3",
         "vue-echarts-v3": "^1.0.4",
-        "vue-router": "^2.3.1"
+        "vue-router": "^2.3.1",
+        "xlsx": "^0.10.8"
     },
     "devDependencies": {
         "@types/axios": "^0.14.0",
@@ -60,6 +64,7 @@
         "optimize-css-assets-webpack-plugin": "^1.3.0",
         "ora": "^1.2.0",
         "rimraf": "^2.6.0",
+        "script-loader": "^0.7.0",
         "semver": "^5.3.0",
         "shelljs": "^0.7.6",
         "style-loader": "^0.18.2",
